--- a/about.html
+++ b/about.html
@@ -5,27 +5,27 @@
   <meta name="description" content="About the horse farm" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - About Us</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="styles.css" /> 
 </head>
 <body>
 
   <!-- Header & Navigation -->
-  <header>
+   <header>
     <div class="header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="index.html">HorseFarm</a>
+        <a href="index.html">Salivonchyk's Farm</a>
       </div>
       <!-- Navigation -->
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="horses.html">Horses</a></li>
-          <li><a href="news.html">News</a></li>
+          <li><a href="horses.html">Horses on farm</a></li>
+          <li><a href="purchase.html">Horses for sale</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="news.html">News</a></li>
+
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="purchase.html">Purchase horses</a></li>
           <li><a href="admin.html">Admin</a></li>
           <li><a href="login.html">LogIn/LogOut</a></li>
         </ul>
@@ -51,7 +51,7 @@
     <section class="team-section">
       <h2>Meet the Owner</h2>
       <div class="owner-info">
-        <img src="https://via.placeholder.com/200" alt="Owner Photo" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FIMG_7437.jpg?alt=media&token=6f0a2505-89f6-4481-806b-715e88a2e7b9" alt="Owner Photo" />
         <p>
           Jane Smith, the owner of HorseFarm, has dedicated her life 
           to equine excellence. A champion rider herself, she understands 
@@ -63,17 +63,40 @@
     <section class="farm-gallery">
       <h2>Our Farm in Pictures</h2>
       <div class="farm-images">
-        <img src="https://via.placeholder.com/300x200" alt="Farm Photo 1" />
-        <img src="https://via.placeholder.com/300x200" alt="Farm Photo 2" />
-        <img src="https://via.placeholder.com/300x200" alt="Farm Photo 3" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FIMG-20250421-WA0017.jpg?alt=media&token=82a7bc7a-d6f8-4359-945b-1fca03388824" alt="Farm Photo 1" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FIMG-20250421-WA0061.jpg?alt=media&token=baf6bc08-6df8-408c-bfbe-a59400310d89" alt="Farm Photo 2" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FIMG-20250421-WA0060.jpg?alt=media&token=b3b4476f-8da4-4bfe-bb7b-9b95cecf5a03" alt="Farm Photo 3" />
       </div>
     </section>
+
+    
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 HorseFarm. All rights reserved.</p>
-  </footer>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script src="scripts.js"></script>
 </body>
