--- a/admin-buyers.html
+++ b/admin-buyers.html
@@ -109,7 +109,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">HorseFarm</a>
+        <a href="index.html">Salivonchyk's Farm</a>
       </div>
       <nav>
         <ul>
@@ -138,9 +138,30 @@
     </div>
   </main>
 
-  <footer>
-    <p style="text-align:center;">&copy; 2025 HorseFarm. All rights reserved.</p>
-  </footer>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script>
     // Fetch buyers data from the backend endpoint
