--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
   <meta name="description" content="Contact the horse farm" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - Contact Us</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="styles.css" /> 
 </head>
 <body>
 
@@ -15,17 +14,18 @@
     <div class="header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="index.html">HorseFarm</a>
+        <a href="index.html">Salivonchyk's Farm</a>
       </div>
       <!-- Navigation -->
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="horses.html">Horses</a></li>
-          <li><a href="news.html">News</a></li>
+          <li><a href="horses.html">Horses on farm</a></li>
+          <li><a href="purchase.html">Horses for sale</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="news.html">News</a></li>
+
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="purchase.html">Purchase horses</a></li>
           <li><a href="admin.html">Admin</a></li>
           <li><a href="login.html">LogIn/LogOut</a></li>
         </ul>
@@ -36,12 +36,13 @@
   <main>
     <section class="contact-info">
       <h1>Get in Touch</h1>
-      <p><strong>Address:</strong> 123 Horse Farm Road, Countryside, USA</p>
-      <p><strong>Phone:</strong> (123) 456-7890</p>
-      <p><strong>Email:</strong> info@horsefarm.com</p>
+      <p><strong>Address:</strong> Europe, Poland,
+56 - 416 Twardogóra Brzezina, 3</p>
+      <p><strong>Phone:</strong> +48 790 779 222</p>
+      <p><strong>Email:</strong> tsalivonchyk@gmail.com</p>
     </section>
 
-    <!-- Feedback Form -->
+    <!-- Feedback Form  
     <section class="feedback-form">
       <h2>Send Us a Message</h2>
       <form id="contact-form" action="#" method="POST">
@@ -61,9 +62,9 @@
           <label for="message">Message*</label>
           <textarea id="message" name="message" rows="5" required></textarea>
         </div>
-        <!-- reCAPTCHA placeholder -->
+    
         <div class="captcha-placeholder">
-          <!-- You would integrate reCAPTCHA here -->
+         
           <p>[ reCAPTCHA Placeholder ]</p>
         </div>
 
@@ -71,25 +72,43 @@
         <p id="form-status"></p>
       </form>
     </section>
+-->
+
 
     <!-- Embedded Map (e.g., Google Maps iframe) -->
     <section class="map-section">
       <h2>Find Us</h2>
       <div class="map-container">
         <!-- Replace with your actual Google Maps embed link -->
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0860224504138!2d-122.4194151846811!3d37.77492977975968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064df168247%3A0x8ea2c15c3b5ce17b!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1660386582385!5m2!1sen!2sus" 
-          width="600" height="450" style="border:0;" allowfullscreen="" 
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424987.2765577319!2d17.28638239350193!3d51.43337769804816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470555d2974d1279%3A0x1f617f4645af9a2c!2sstajnia%20OT%20Salivonchyk!5e0!3m2!1sen!2spl!4v1747491163994!5m2!1sen!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 HorseFarm. All rights reserved.</p>
-  </footer>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script src="scripts.js"></script>
 </body>
