--- a/news.html
+++ b/news.html
@@ -6,32 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - News</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="css/header.css" />
+ 
 </head>
 <body>
 
   <!-- Header & Navigation -->
-<header>
-  <div class="header-container">
-    <!-- Logo -->
-    <div class="logo">
-      <a href="index.html">HorseFarm</a>
+ <header>
+    <div class="header-container">
+      <!-- Logo -->
+      <div class="logo">
+        <a href="index.html">Salivonchyk's Farm</a>
+      </div>
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="horses.html">Horses on farm</a></li>
+          <li><a href="purchase.html">Horses for sale</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="news.html">News</a></li>
+
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="admin.html">Admin</a></li>
+          <li><a href="login.html">LogIn/LogOut</a></li>
+        </ul>
+      </nav>
     </div>
-    <!-- Navigation -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="horses.html">Horses</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="purchase.html">Purchase horses</a></li>
-        <li><a href="admin.html">Admin</a></li>
-        <li><a href="login.html">LogIn/LogOut</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  </header>
 
   <main>
     <section>
@@ -72,9 +73,30 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 HorseFarm. All rights reserved.</p>
-  </footer>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script src="scripts.js"></script>
 </body>
