--- a/profile.html
+++ b/profile.html
@@ -9,52 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    #profile-container {
-      max-width: 500px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-    label {
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    input {
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px;
-      background: #333;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #444;
-    }
-  </style>
+  
 </head>
 <body>
   <h1>Профиль пользователя</h1>
@@ -75,6 +30,31 @@
       <button type="submit">Сохранить изменения</button>
     </form>
   </div>
+
+  <footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script>
     // TODO: Replace with your Firebase project configuration
