--- a/add-horse.html
+++ b/add-horse.html
@@ -5,8 +5,7 @@
   <meta name="description" content="Добавить новую лошадь">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Horse - HorseFarm Admin</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="styles.css" /> 
   <style>
     /* Common header styles */
     .header-container {
@@ -98,7 +97,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">HorseFarm</a>
+        <a href="index.html">Salivonchyk's Farm</a>
       </div>
       <nav>
         <ul>
@@ -184,6 +183,31 @@
       <button type="submit">Сохранить</button>
     </form>
   </div>
+
+  <footer>
+  <div class="footer-content">
+    <p>&copy; 2025 HorseFarm. Все права защищены.</p>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script>
     // Populate the "Цель покупки" drop-down from the backend
