--- a/horses.html
+++ b/horses.html
@@ -5,82 +5,9 @@
   <meta name="description" content="Лошади на ферме">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Лошади - HorseFarm</title>
-  <style>
-    /* Header styles */
-    header {
-      background: #333;
-      color: #fff;
-      padding: 10px 20px;
-    }
-    header .logo {
-      font-size: 24px;
-      font-weight: bold;
-      display: inline-block;
-      margin-right: 20px;
-    }
-    header nav ul {
-      list-style: none;
-      display: inline-block;
-      padding: 0;
-      margin: 0;
-      vertical-align: middle;
-    }
-    header nav ul li {
-      display: inline-block;
-      margin-right: 15px;
-    }
-    header nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 12px;
-    }
-    header nav ul li a:hover,
-    header nav ul li a.active {
-      background: #444;
-      border-radius: 4px;
-    }
-    
-    /* Main content styles */
-    .horse-container {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 10px;
-    }
-    .horse-card {
-      display: flex;
-      background: #fff;
-      margin-bottom: 20px;
-      padding: 10px;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .horse-card img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 4px;
-      margin-right: 20px;
-    }
-    .horse-details {
-      flex: 1;
-    }
-    .horse-details h2 {
-      margin: 0 0 10px;
-    }
-    .horse-details p {
-      margin: 5px 0;
-    }
-    
-    /* Footer styles */
-    footer {
-      background: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      margin-top: 20px;
-    }
-  </style>
-    <link rel="stylesheet" href="css/header.css" />
+  
+   
+     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Header with navigation -->
@@ -88,17 +15,18 @@
     <div class="header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="index.html">HorseFarm</a>
+        <a href="index.html">Salivonchyk's Farm</a>
       </div>
       <!-- Navigation -->
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="horses.html">Horses</a></li>
-          <li><a href="news.html">News</a></li>
+          <li><a href="horses.html">Horses on farm</a></li>
+          <li><a href="purchase.html">Horses for sale</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="news.html">News</a></li>
+
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="purchase.html">Purchase horses</a></li>
           <li><a href="admin.html">Admin</a></li>
           <li><a href="login.html">LogIn/LogOut</a></li>
         </ul>
@@ -115,9 +43,30 @@
     </div>
   </main>
 
-  <footer>
+<footer>
+  <div class="footer-content">
     <p>&copy; 2025 HorseFarm. Все права защищены.</p>
-  </footer>
+
+    <div class="footer-media">
+      <h4>MEDIA:</h4>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Facebook</a></li>
+        <li><a href="#" target="_blank" rel="noopener">YouTube</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <p><strong>Email:</strong> <a href="mailto:tsalivonchyk@gmail.com">tsalivonchyk@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+48790779222">+48 790 779 222</a></p>
+      <p><strong>Address:</strong><br>
+         Europe, Poland,<br>
+         56 - 416 Twardogóra Brzezina, 3
+      </p>
+    </div>
+  </div>
+</footer>
+
 
   <script>
     // Fetch horses from the server and display those with status BOUGHT_ON_FARM
