[Add] -  'news-detail'

--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
       <div class="owner-info">
         <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FIMG_7437.jpg?alt=media&token=6f0a2505-89f6-4481-806b-715e88a2e7b9" alt="Owner Photo" />
         <p>
-          Jane Smith, the owner of HorseFarm, has dedicated her life 
-          to equine excellence. A champion rider herself, she understands 
+         Taras Salivonchyk, the owner of Salivonchyk's Farm, has dedicated his life 
+          to equine excellence. A champion rider himself, he understands 
           the importance of genetics, proper training, and compassionate care.
         </p>
       </div>
