--- a/news.html
+++ b/news.html
@@ -52,19 +52,13 @@
       <!-- News List -->
       <div class="news-list">
         <!-- Example news item -->
-        <article class="news-item" data-date="2025-01-05">
-          <h2>Breaking: New Racing Season Announced</h2>
-          <p class="date">January 5, 2025</p>
-          <p class="summary">Our farm is preparing for the upcoming racing season with newly trained horses ready to compete.</p>
-          <a href="news-details.html">Read More</a>
-        </article>
+      
+        
+<!-- News List -->
+<div class="news-list" id="news-list">
+  <!-- News items will be injected here via JavaScript -->
+</div>
 
-        <article class="news-item" data-date="2025-01-01">
-          <h2>Happy New Year from HorseFarm</h2>
-          <p class="date">January 1, 2025</p>
-          <p class="summary">We wish all our clients, partners, and friends a prosperous new year!</p>
-          <a href="news-details.html">Read More</a>
-        </article>
 
         <!-- More news items as needed -->
       </div>
