--- a/index.html
+++ b/index.html
@@ -67,12 +67,39 @@
   
   <section class="highlights"> </section>
 
-  
+
   <section class="game">
     <h2>Game Our Farm</h2>
     <p>You can visit our virtual farmin our game </p>
     <a href="game.html" class="btn">Learn More about game.</a>
   </section>
+
+
+   <section class="highlights"> </section>
+
+  
+<section class="our-partners">
+  <h2>Our Partners</h2>
+  <p>Thank you for your partnership</p>
+
+  <div class="partners-media-gallery">
+       <a href="https://www.akordirect.com/" target="_blank" rel="noopener">
+      <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2F5264966152516398956.jpg?alt=media&token=f30c96e5-1198-431e-9086-bc35df1ee660" alt="Partner 1" />
+    </a>
+
+    <a href="https://fotomo-art.pl/" target="_blank" rel="noopener">
+      <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2Ffotoart.jpg?alt=media&token=bf515784-2ff6-4cc3-87d4-21eb272e993b" alt="Partner 2" />
+    </a>
+ 
+    <a href="https://www.facebook.com/urszula.chromik.5" target="_blank" rel="noopener">
+      <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2Ffotographer2.jpg?alt=media&token=05b7513a-f42c-4e21-8cb7-0b765bc9fb53" alt="Partner 3" />
+    </a>
+    <a href="https://torsluzewiec.pl/" target="_blank" rel="noopener">
+      <img src="https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2Ftor_warsaw.png?alt=media&token=5f64dc21-0e24-43f9-ad14-d60bf6a40efc" alt="Partner 4" />
+    </a>
+  </div>
+</section>
+
 
   
   <!-- Footer -->
