[Fix] -Dmitro Prokopenko

--- a/game.html
+++ b/game.html
@@ -102,6 +102,7 @@
   <h2>Meet the Team</h2>
   <p>Our game has been made possible by a passionate and talented team:</p>
   <ul>
+    <li><strong>Dmitro Prokopenko</strong>  – Product Owner</li>
     <li><strong>Tatyana</strong> and <strong>Anastasia</strong> – Project Managers</li>
     <li><strong>Fedor</strong> – Game Designer</li>
     <li><strong>Ilya</strong> and <strong>Vova</strong> – Unreal Engine Developers</li>
