fix: correct TikTok spelling

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <ul>
         <li><a href="https://www.instagram.com/salivonchyk.llc/" target="_blank" rel="noopener">Instagram</a></li>
         <!-- <li><a href="#" target="_blank" rel="noopener">Facebook</a></li> -->
-        <li><a href="https://www.tiktok.com/@salivonchyk.horses" target="_blank" rel="noopener">TicTok</a></li>
+        <li><a href="https://www.tiktok.com/@salivonchyk.horses" target="_blank" rel="noopener">TikTok</a></li>
       </ul>
     </div>
 
