--- a/game.html
+++ b/game.html
@@ -122,9 +122,9 @@
       <div class="footer-media">
         <h4>MEDIA:</h4>
         <ul>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">YouTube</a></li>
+          <li><a href="https://www.instagram.com/salivonchyk.llc/" target="_blank" rel="noopener">Instagram</a></li>
+          <!-- <li><a href="#" target="_blank" rel="noopener">Facebook</a></li> -->
+          <li><a href="https://www.tiktok.com/@salivonchyk.horses" target="_blank" rel="noopener">TikTok</a></li>
         </ul>
       </div>
       <div class="footer-contact">
