Organize assets into css and js folders

--- a/admin-buyers.html
+++ b/admin-buyers.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Админ-панель: Покупатели лошадей">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Buyers - HorseFarm</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Basic page styles */
     body {
