--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Virtual Horse Farm Game">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horse Farm - Game</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     .game-content {
       max-width: 900px;
