--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Latest horse farm news" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - News</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
  
 </head>
 <body>
@@ -91,6 +91,6 @@
 </footer>
 
 
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
