--- a/purchase.html
+++ b/purchase.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Покупка коней">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Покупка коней</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <style>
     /* --- General Card Layout --- */
     .horse-card {
@@ -171,7 +171,7 @@
       font-size: 14px;
     }
   </style>
-    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="css/header.css" />
 </head>
 <body>
   <!-- Common Header -->
