--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="description" content="About the horse farm" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - About Us</title>
-  <link rel="stylesheet" href="styles.css" /> 
+  <link rel="stylesheet" href="css/styles.css" /> 
 </head>
 <body>
 
@@ -97,6 +97,6 @@
 </footer>
 
 
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
