--- a/add-horse.html
+++ b/add-horse.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Добавить новую лошадь">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Horse - HorseFarm Admin</title>
-  <link rel="stylesheet" href="styles.css" /> 
+  <link rel="stylesheet" href="css/styles.css" /> 
   <style>
     /* Common header styles */
     .header-container {
