--- a/horse-details.html
+++ b/horse-details.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Detailed horse information" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - Horse Details</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
@@ -109,6 +109,6 @@
 </footer>
 
 
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
