--- a/horses.html
+++ b/horses.html
@@ -7,7 +7,7 @@
   <title>Лошади - HorseFarm</title>
   
    
-     <link rel="stylesheet" href="styles.css" />
+     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <!-- Header with navigation -->
