--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Horse breeding and performance activities" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - Home</title> 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
@@ -130,7 +130,7 @@
 
  
 
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
   <script>
     // Your Firebase configuration
     const firebaseConfig = {
