--- a/news-details.html
+++ b/news-details.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Horse farm news detail" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Horse Farm - News Detail</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   
 </head>
 <body>
