Refresh design with modern style

--- a/horse-details.html
+++ b/horse-details.html
@@ -79,7 +79,7 @@
 
     <!-- Back to Horses List Link -->
     <div style="padding: 1rem 2rem;">
-      <a href="horses.html" class="btn" style="background: #333; color: #fff; text-decoration: none; padding: 0.6rem 1.2rem; border-radius: 4px;">← Back to Horses</a>
+      <a href="horses.html" class="btn">← Back to Horses</a>
     </div>
   </main>
 
