Add service page and update navigation

--- a/news-details.html
+++ b/news-details.html
@@ -21,6 +21,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="horses.html">Horses on farm</a></li>
           <li><a href="purchase.html">Horses for sale</a></li>
+          <li><a href="service.html">Services</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="contact.html">Contact Us</a></li>
