--- a/add-horse.html
+++ b/add-horse.html
@@ -107,6 +107,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="purchase.html">Purchase horses</a></li> 
+          <li><a href="service.html">Services</a></li>
           <li><a href="login.html">LogIn/LogOut</a></li>
         </ul>
       </nav>
