--- a/add-horse.html
+++ b/add-horse.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Добавить новую лошадь">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Horse - HorseFarm Admin</title>
+  <link rel="stylesheet" href="css/styles.css" />
   <style>
     :root {
       --bg: #F9FAFB;
@@ -114,25 +115,20 @@
     button:hover {
       background: #2563EB;
     }
-  </style>
+</style>
 </head>
 <body>
-  <header>
-    <div class="logo">Salivonchyk's Farm</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="horses.html">Horses</a>
-      <a href="news.html">News</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
-      <a href="purchase.html">Purchase horses</a>
-      <a href="service.html">Services</a>
-      <a href="login.html">LogIn/LogOut</a>
-    </nav>
-    <div class="avatar">
-      <img src="https://via.placeholder.com/32" alt="User avatar">
-    </div>
-  </header>
+  <div class="admin-layout">
+    <aside class="admin-sidebar">
+      <ul>
+        <li><a href="admin.html">Horses</a></li>
+        <li><a href="add-horse.html">Add Horses</a></li>
+        <li><a href="admin-service.html">Service</a></li>
+        <li><a href="admin-news.html">News</a></li>
+        <li><a href="admin-buyers.html">Buyers</a></li>
+      </ul>
+    </aside>
+    <div class="admin-main">
 
   <main>
     <div class="card">
@@ -205,6 +201,7 @@
     </div>
   </main>
 
+  </div> <!-- admin-main -->
   <footer>
   <div class="footer-content">
     <p>&copy; 2025 HorseFarm. Все права защищены.</p>
@@ -228,7 +225,7 @@
     </div>
   </div>
 </footer>
-
+  </div> <!-- admin-layout -->
 
   <script>
     // Populate the "Цель покупки" drop-down from the backend
