--- a/admin.html
+++ b/admin.html
@@ -8,26 +8,17 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <!-- Common Header -->
-  <header>
-    <div class="header-container">
-      <div class="logo">
-        <a href="index.html">Salivonchyk's Farm</a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="horses.html">Horses on farm</a></li>
-          <li><a href="purchase.html">Horses for sale</a></li>
-          <li><a href="service.html">Services</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="login.html">LogIn/LogOut</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="admin-layout">
+    <aside class="admin-sidebar">
+      <ul>
+        <li><a href="admin.html">Horses</a></li>
+        <li><a href="add-horse.html">Add Horses</a></li>
+        <li><a href="admin-service.html">Service</a></li>
+        <li><a href="admin-news.html">News</a></li>
+        <li><a href="admin-buyers.html">Buyers</a></li>
+      </ul>
+    </aside>
+    <div class="admin-main">
   
   <!-- Filter Section with "Add horse" Button -->
   <section class="filter-section">
@@ -76,8 +67,9 @@
     </div>
   </div>
 </footer>
+    </div> <!-- admin-main -->
+  </div> <!-- admin-layout -->
 
-  
   <script>
     // URL for fetching horses (includes buyer information)
     const apiUrl = "https://flato.q11.jvmhost.net/api/horses/with-buyers";
