Add video gallery section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
      
    
   </section>
+  <!-- Video Gallery -->
+  <section class="video-gallery">
+    <div class="video-row">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/QOhb7aElwDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xCW8MKJoS3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ug0uzsdclsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+  </section>
 
   <!-- our horses -->
   <section class="our-horses">  
