Update game page with instructions and download link

--- a/game.html
+++ b/game.html
@@ -113,7 +113,14 @@
 
 
 
-    <a href="https://your-game-url.com" class="play-button" target="_blank">Start the Game</a>
+    <p>In order to play our game, you need to:</p>
+    <ul>
+      <li>install the Unreal Engine program,</li>
+      <li>Download the archive with the game,</li>
+      <li>Unzip the archive,</li>
+      <li>There will be a file with the Unreal Engine icon, run it.</li>
+    </ul>
+    <p><a href="https://drive.google.com/drive/folders/18inO600Z-b6MkHKZUcN21nPxvZTpqkes?usp=sharing" class="play-button" target="_blank">Download the archive here</a></p>
   </main>
 
   <!-- Footer -->
